# rust-ml

./: Cargo.toml  iris_model.safetensors  model.safetensors  norm.json
data/: data_collect.py  iris.csv
