[package]
name = "rust_ml"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle.git", package = "candle-nn" }
csv = "1.3"
ndarray = "0.16.1"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"